--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
+/* Reset default styles */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* Constants */
 :root {
-  /* -----CONSTANTS CONSTANTS CONSTANTS----- */
-  /* FONT */
+  /* Font */
   --font: "Poppins", sans-serif;
 
-  /* COLORS */
+  /* Colors */
   --primaryColorGreen: #1dd48b;
   --primaryColorGreen100: #0b1814;
   --primaryColorGreen200: #173f30;
@@ -30,31 +31,52 @@
   --primaryColorNeutral900: #ecf4f0;
   --primaryColorBlack: #000000;
   --primaryColorBlack100: #122b20;
-
   --primaryColorWhite: #ffffff;
 
-  /* BACKGROUND COLOR */
-  --primaryBgColor: #f0fff9;
+  /* Background color */
+  --primaryBackgroundColor: #f0fff9;
 
-  /* TEXT COLOR */
+  /* Text color */
   --primaryTextColor: #173f30;
 }
 
+/* Body styles */
 body {
   font-family: var(--font);
   scroll-behavior: smooth;
-  min-width: 425px;
+  background-color: pink;
 }
 
-.section{
+/* Section styles */
+section {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
-.container{
-  margin: 0 auto;
-  max-width: 1040px;
+/* Container styles */
+.container {
+  max-width: 65rem;
+  width: 100%;
   height: 100%;
+  border: 1px solid green;
+}
+
+/* List styles */
+ul, ol, li {
+  list-style: none;
+}
+
+/* Additional styles */
+.label-text {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+/* Link styles */
+a {
+  text-decoration: none;
+  color: inherit;
 }
