--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -1,1 +1,14 @@
+.hero {
+  position: relative;
+  height: 56.25rem;
+  width: 100%;
+}
 
+.background-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
