--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,8 @@
 body {
   font-family: var(--font);
   scroll-behavior: smooth;
-  background-color: pink;
+  background-color: var(--primaryBackgroundColor);
+  color: var(--primaryTextColor);
 }
 
 /* Section styles */
@@ -54,14 +55,15 @@ section {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  margin: 2rem 0;
 }
 
 /* Container styles */
 .container {
+  position: relative;
   max-width: 65rem;
   width: 100%;
   height: 100%;
-  border: 1px solid green;
 }
 
 /* List styles */
@@ -79,4 +81,32 @@ ul, ol, li {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+h1 {
+  color: var(--primaryBackgroundColor);
+  font-size: 3rem;
+  font-weight: 800;
+  line-height: 130%;
+}
+
+p {
+  color: var(--primaryBackgroundColor);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 170%;
+}
+
+button {
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.btn-one {
+  color: var(--primaryTextColor);
+  width: 12.73rem;
+  height: 3.5rem;
 }
