--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ section {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  margin: 2rem 0;
+  margin-bottom: 4.5rem;
 }
 
 /* Container styles */
