--- a/src/App.css
+++ b/src/App.css
@@ -84,14 +84,17 @@ a {
 }
 
 h1 {
-  color: var(--primaryBackgroundColor);
   font-size: 3rem;
   font-weight: 800;
   line-height: 130%;
 }
 
+h2{
+  font-size: 2.5rem;
+  font-weight: 900;
+}
+
 p {
-  color: var(--primaryBackgroundColor);
   font-size: 1rem;
   font-weight: 500;
   line-height: 170%;
