--- a/src/components/whatWeOffer/WhatWeOffer.module.css
+++ b/src/components/whatWeOffer/WhatWeOffer.module.css
@@ -16,7 +16,6 @@
   display: flex;
   align-items: center;
   gap: 1.25rem;
-  margin-bottom: 2.05rem;
 }
 
 .ruler {
@@ -41,8 +40,8 @@
 
 .description {
   text-align: center;
-  max-width: 38.0625rem;
-  margin-bottom: 5.87rem;
+  max-width: 35.0625rem;
+  margin: 2.05rem 0 5.87rem;
 }
 
 .cards {
@@ -61,4 +60,5 @@
 .card h3 {
   white-space: nowrap;
   margin-bottom: 1rem;
+  color: var(--primaryColorGreen100);
 }
