--- a/src/components/whatWeOffer/WhatWeOffer.module.css
+++ b/src/components/whatWeOffer/WhatWeOffer.module.css
@@ -24,6 +24,11 @@
   background-color: var(--primaryColorGreen);
 }
 
+.page-ruler img {
+  width: 1.88938rem;
+  height: 1.88938rem;
+}
+
 .what-we-offer-content h2 {
   color: var(--primaryColorGreen);
   margin-bottom: 0.25rem;
