--- a/src/components/portfolio/Portfolio.module.css
+++ b/src/components/portfolio/Portfolio.module.css
@@ -1,18 +1,27 @@
-.portfolio{
-    position: relative;
-    height: 53.75rem;
-    width: 100%;
-    border: 2px solid black;
+.portfolio {
+  position: relative;
+  height: 53.75rem;
+  width: 100%;
 }
 
-.portfolio-content{
-    border: 2px solid black;
-    height: 100%;
+.portfolio-content {
+  border: 2px solid black;
+  height: 100%;
 }
 
-/*   
-  .payment-plan-content {
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
-  } */
+.portfolios {
+  border: 2px solid black;
+  margin-top: 4.05rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.portfolio-card {
+  display: flex;
+  flex-direction: column;
+  width: 19.3125rem;
+  height: 38.0625rem;
+  border-radius: 0.5rem;
+  border-bottom: 5px solid var(--primaryColorGreen);
+  box-shadow: 0px 0px 25px 15px rgba(0, 0, 0, 0.08);
+}
