--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,9 @@ section {
 }
 
 /* List styles */
-ul, ol, li {
+ul,
+ol,
+li {
   list-style: none;
 }
 
@@ -89,14 +91,26 @@ h1 {
   line-height: 130%;
 }
 
-h2{
+h2 {
   font-size: 2.5rem;
   font-weight: 900;
 }
 
-p {
+h3 {
+  font-size: 1.125rem;
+  font-weight: 600;
+}
+
+h4 {
   font-size: 1rem;
   font-weight: 500;
+  line-height: 1.25rem;
+  font-family: var(--font);
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
   line-height: 170%;
 }
 
@@ -112,4 +126,18 @@ button {
   color: var(--primaryTextColor);
   width: 12.73rem;
   height: 3.5rem;
+}
+
+.btn-two {
+  width: 9.4375rem;
+  height: 3.5rem;
+  color: var(--primaryBackgroundColor);
+  font-weight: 700;
+  border-radius: 0.5rem;
+  background: linear-gradient(
+    278deg,
+    var(--primaryColorGreen600) 0%,
+    var(--primaryColorGreen) 78.37%,
+    var(--primaryColorGreen800) 100%
+  );
 }
