--- a/src/components/portfolio/Portfolio.module.css
+++ b/src/components/portfolio/Portfolio.module.css
@@ -5,12 +5,10 @@
 }
 
 .portfolio-content {
-  border: 2px solid black;
   height: 100%;
 }
 
 .portfolios {
-  border: 2px solid black;
   margin-top: 4.05rem;
   display: flex;
   justify-content: space-between;
@@ -24,4 +22,26 @@
   border-radius: 0.5rem;
   border-bottom: 5px solid var(--primaryColorGreen);
   box-shadow: 0px 0px 25px 15px rgba(0, 0, 0, 0.08);
+  padding: 0 1.62rem;
+}
+
+.portfolio-card img {
+  width: 16.05506rem;
+  height: 8.75rem;
+  margin-top: 3.66rem;
+}
+
+.portfolio-card h3 {
+  color: var(--primaryColorGreen100);
+  margin-top: 2.5rem;
+}
+
+.portfolio-card h4 {
+  margin-top: 0.25rem;
+  color: var(--primaryColorNeutral600);
+}
+
+.portfolio-card p {
+  width: 15.8125rem;
+  margin: 1.75rem 0 3.62rem;
 }
