--- a/src/components/sectionTitle/SectionTitle.module.css
+++ b/src/components/sectionTitle/SectionTitle.module.css
@@ -20,10 +20,11 @@
   
   .image-container {
     width: 0.88938rem;
-    height: 0.88938rem;
+    height: 1.77876rem;
   }
   
   .image-container img {
+    width: 100%;
     height: 100%;
   }
   
