--- a/src/components/customerPlanOptions/CustomerPlanOptions.module.css
+++ b/src/components/customerPlanOptions/CustomerPlanOptions.module.css
@@ -1,4 +1,124 @@
-.customer-plan-options{
+.customer-plan-options {
+    margin: 0;
+    position: relative;
+    height: 46rem;
+    width: 100%;
+    border: 1px solid green;
+  }
+  
+  .customer-plan-options-content {
+    height: 100%;
+  }
+  
+  .plan-options {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    margin-top: 5.12rem;
+    gap: 1.7rem;
+  }
+  
+  .plan {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 18.75rem;
+    height: 31.25rem;
+    padding: 0 2.19rem;
+    border: 1px solid var(--primaryColorNeutral600);
+    margin-top: 2rem;
+  }
+  
+  .plan:nth-child(2) {
+    transform: scale(1.2);
+  }
+  
+  .plan-title-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 3.125rem;
+    border: 1px solid var(--primaryColorNeutral600);
+    background: var(--primaryColorNeutral900);
+  }
+  
+  .plan-title-container h2 {
+    color: var(--primaryColorGreen100);
+    text-align: center;
+    font-size: 0.875rem;
+    font-weight: 600;
+  }
+  
+  .plan span {
+    color: var(--primaryColorGreen100);
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 170%;
+    margin: 4.625rem 0 0.25rem;
+  }
+  
+  .price {
+    display: flex;
+    height: 4rem;
+    margin: 1.12rem 0 1.87rem;
+  }
+  
+  .money-sign,
+  .per-month {
+    color: var(--primaryColorGreen);
+    font-weight: 300;
+  }
+  
+  .money-sign {
+    font-size: 1.75rem;
+    align-self: start;
+  }
+  
+  .per-month {
+    font-size: 1.25rem;
+    align-self: end;
+  }
+  
+  .dollar-amount {
+    color: var(--primaryColorGreen);
+    font-size: 4rem;
+    font-weight: 300;
+    align-self: center;
+  }
+  
+  .perk {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+  
+  .perk:last-child {
     margin-bottom: 0;
-    border: 1px solid black;
-}
+  }
+  
+  .perk img {
+    width: 0.9375rem;
+    height: 0.9375rem;
+  }
+  
+  .perk li {
+    color: var(--primaryColorGreen100);
+    font-family: Poppins, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.7rem;
+    width: 200px;
+  }
+  
+  .plan button {
+    position: absolute;
+    bottom: 1.44rem;
+  }
+  
