--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,6 +1,40 @@
-.footer{
-    position: relative;
-    height: 34.375rem;
-    width: 100%;
-    border: 2px solid black;
+.footer {
+  position: relative;
+  height: auto;
+  width: 100%;
 }
+
+.footer-container{
+  position: relative;
+  height: 29.375rem;  
+}
+
+.background-container{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 79.875rem;
+  width: 100%;
+  z-index: -1;
+  overflow: hidden;
+  background: linear-gradient(
+    301deg,
+    var(--primaryColorGreen600) 34.39%,
+    var(--primaryColorGreen100) 100%
+  );
+}
+
+
+.copyright{
+  background: linear-gradient(90deg, var(--primaryColorGreen200) 0%, var(--primaryColorGreen) 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5rem;
+}
+
+.copyright p{
+ color: var(--primaryBackgroundColor);
+ line-height: 1.25rem;
+}
+
