--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -2,11 +2,14 @@
   position: relative;
   height: auto;
   width: 100%;
+  margin-top: -4px;
 }
 
 .footer-container{
   position: relative;
-  height: 29.375rem;  
+  height: 29.375rem; 
+  display: flex;
+  justify-content: center;
 }
 
 .background-container{
@@ -19,9 +22,14 @@
   overflow: hidden;
   background: linear-gradient(
     301deg,
-    var(--primaryColorGreen600) 34.39%,
+    var(--primaryColorGreen) 34.39%,
     var(--primaryColorGreen100) 100%
   );
+}
+
+.footer-content{
+  border: 2px solid black;
+  height: 100%;
 }
 
 
