--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -5,14 +5,14 @@
   margin-top: -4px;
 }
 
-.footer-container{
+.footer-container {
   position: relative;
-  height: 29.375rem; 
+  height: 29.375rem;
   display: flex;
   justify-content: center;
 }
 
-.background-container{
+.background-container {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -27,22 +27,93 @@
   );
 }
 
-.footer-content{
+.footer-content {
   border: 2px solid black;
   height: 100%;
+  display: flex;
 }
 
+.footer-content-left {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 7.06rem;
+  flex: 1;
+}
 
-.copyright{
-  background: linear-gradient(90deg, var(--primaryColorGreen200) 0%, var(--primaryColorGreen) 100%);
+.toggle-container{
+  border: 2px solid black;
+  width: 5rem;
+}
+
+.footer-content-left .logo-container{
+display: flex;
+flex-direction: column;
+min-height: 15.25rem;
+border: 2px solid black;
+
+}
+
+.footer-content-left .logo {
+  width: 9.94488rem;
+  height: 5.385rem;
+  margin-bottom: 1.68rem;
+}
+
+.logo-contact-details{
+  display: flex;
+  flex-direction: column;
+  gap: 0.87rem;
+}
+
+.logo-contact-details a{
+  color: var(--primaryBackgroundColor);
+line-height: 170%;
+}
+
+.footer-content-right {
+  flex: 1;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer-content-right h2 {
+  color: var(--primaryBackgroundColor);
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.footer-content-right .ruler {
+  width: 10.9375rem;
+  height: 0.0625rem;
+  background: var(--primaryBackgroundColor);
+  margin: 0.44rem 0 1rem;
+}
+
+.footer-content-right ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.footer-content-right li {
+  color: var(--primaryBackgroundColor);
+  white-space: nowrap;
+}
+
+.copyright {
+  background: linear-gradient(
+    90deg,
+    var(--primaryColorGreen200) 0%,
+    var(--primaryColorGreen) 100%
+  );
   display: flex;
   align-items: center;
   justify-content: center;
   height: 5rem;
 }
 
-.copyright p{
- color: var(--primaryBackgroundColor);
- line-height: 1.25rem;
+.copyright p {
+  color: var(--primaryBackgroundColor);
+  line-height: 1.25rem;
 }
-
