--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -19,15 +19,35 @@
   height: 5.385rem;
 }
 
-.navigation-content ul {
+.nav-buttons{
   display: flex;
-  max-width: 37.1875rem;
   width: 100%;
+  max-width: 37.1875rem;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+}
+
+.navigation-content ul {
   justify-content: space-between;
+  display: flex;
+  width: 100%;
   color: var(--primaryBackgroundColor);
   z-index: 5;
 }
 
 .nav-links li {
   font-weight: 700;
+}
+
+.top-toggle-button {
+  top: 60px;
+  right: 15px;
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  z-index: 1000;
+  -webkit-transition: 0.3s ease-in;
+  -o-transition: 0.3s ease-in;
+  transition: 0.3s ease-in;
 }
