--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ a {
   color: inherit;
 }
 
+/* Heading styles */
 h1 {
   font-size: 3rem;
   font-weight: 800;
@@ -109,12 +110,14 @@ h4 {
   font-family: var(--font);
 }
 
+/* Paragraph styles */
 p {
   font-size: 1rem;
   font-weight: 400;
   line-height: 170%;
 }
 
+/* Button styles */
 button {
   border: none;
   border-radius: 4px;
@@ -143,53 +146,39 @@ button {
   );
 }
 
+/* Toggle container styles */
 .toggle-container {
-  box-sizing: border-box;
-  background: 0 0;
+  background: transparent;
   border: none;
   height: 40px;
   width: 30px;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
-  -webkit-box-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
   align-items: center;
-  cursor: pointer;
 }
 
 .toggler-container {
-  cursor: pointer;
-  box-sizing: border-box;
-  font-family: Poppins,sans-serif;
-  color: #646464;
   margin: 0;
   width: 30px;
   height: 16px;
+  z-index: 20;
   border-radius: 10px;
-  background: 0 0;
+  background: #fff;
   border: 3px solid #fff;
-  -webkit-box-align: center;
-  transition: .3s ease;
-  -webkit-box-pack: center;
-  justify-content: center;
-  z-index: 1000;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
+  transition: .3s ease;
   transform: rotate(90deg);
 }
 
+.toggler-container-dark {
+  background: linear-gradient(90deg, #43b7ff 0%, #00ddf6 100%);
+  border: none;
+}
+
 .toggler {
-  cursor: pointer;
-  box-sizing: border-box;
-  font-family: Poppins,sans-serif;
-  color: #646464;
-  margin: 0;
   height: 20px;
   width: 20px;
   left: -8px;
@@ -197,18 +186,10 @@ button {
   background: #fff;
   position: absolute;
   transition: .3s ease;
-  box-shadow: 0 0 5px 0 rgba(0,0,0,.75);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, .75);
 }
 
 .toggler-dark {
   left: 15px;
   transition: .3s ease;
-
 }
-
-
-
-
-
-
-
