--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -73,6 +73,10 @@
   z-index: 0;
 }
 
+.wire-dark{
+  background: var(--primaryColorBlack);
+}
+
 .triangle {
   border-left: 26px solid transparent;
   border-right: 26px solid transparent;
@@ -80,6 +84,11 @@
   -webkit-transform: translateY(-15px);
   -ms-transform: translateY(-15px);
   transform: translateY(-15px);
+  
+}
+.triangle-dark{
+  border-bottom: 26px solid var(--primaryColorBlack);
+  
 }
 
 .bulb {
@@ -87,22 +96,56 @@
   height: 20px;
   width: 20px;
   position: relative;
-  z-index: -1;
+  z-index: -100;
   border-radius: 50%;
   margin: auto;
   position: absolute;
   bottom: 6px;
   right: 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
+}
+
+.bulb:before {
+  display: none;
+  position: absolute;
+  border-radius: 50%;
+  content: '';
+  height: 79px;
+  width: 79px;
+  opacity: .7;
+  animation-name: bulbFlicker;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
+  animation-timing-function: step-start;
+  transform: translateY(-22px);
+  background: #43b7ff;
+  background: -o-radial-gradient(circle, #43b7ff 0, rgba(0,0,0,0) 45%);
+  background: radial-gradient(circle, #43b7ff 0, rgba(0,0,0,0) 45%);
+}
+
+.bulb-animated:before{
+  display: block;
+}
+
+@keyframes bulbFlicker {
+  0%, 2%, 9%, 26%, 48% {
+    background: #43b7ff;
+    background: -o-radial-gradient(circle, #43b7ff 0, rgba(0,0,0,0) 45%);
+    background: radial-gradient(circle, #43b7ff 0, rgba(0,0,0,0) 45%);
+  }
+  
+  1%, 8%, 25%, 47% {
+    background: rgba(67, 183, 255, 0);
+  }
+  
+  100% {
+    background: #43b7ff;
+    background: -o-radial-gradient(circle, #43b7ff 0, rgba(0,0,0,0) 45%);
+    background: radial-gradient(circle, #43b7ff 0, rgba(0,0,0,0) 45%);
+  }
 }
 
 .toggle-container {
@@ -132,7 +175,7 @@
   height: 16px;
   border-radius: 10px;
   background: 0 0;
-  border: 3px solid #fff;
+  border: 3px solid var(--primaryBackgroundColor);
   -webkit-box-align: center;
   transition: .3s ease;
   -webkit-box-pack: center;
@@ -156,7 +199,7 @@
   width: 20px;
   left: -8px;
   border-radius: 50%;
-  background: #fff;
+  background: var(--primaryBackgroundColor);
   position: absolute;
   transition: .3s ease;
   box-shadow: 0 0 5px 0 rgba(0,0,0,.75);
