--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@
   --primaryTextColor: #173f30;
 }
 
+[data-theme="dark"]{
+  --primaryBackgroundColor: yellow;
+}
+
 /* Body styles */
 body {
   font-family: var(--font);
