--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -2,7 +2,8 @@
   position: relative;
   height: 100%;
   width: 100%;
-  margin-top: -3.85px;
+  margin-top: -4px;
+  /* start here */
 }
 
 .footer-container {
