--- a/src/components/whoWeAre/WhoWeAre.module.css
+++ b/src/components/whoWeAre/WhoWeAre.module.css
@@ -1,8 +1,8 @@
 .who-we-are {
   position: relative;
-  height: 54.125rem;
+  min-height: 54.125rem;
   width: 100%;
-  margin-bottom: 4.5rem;
+  padding-bottom: 4.5rem;
 
 }
 
