--- a/src/components/customerPlanOptions/CustomerPlanOptions.module.css
+++ b/src/components/customerPlanOptions/CustomerPlanOptions.module.css
@@ -89,7 +89,7 @@
   
   .money-sign,
   .per-month {
-    color: var(--primaryColorGreen);
+    color: var(--primaryColor);
     font-weight: 300;
   }
   
@@ -104,7 +104,7 @@
   }
   
   .dollar-amount {
-    color: var(--primaryColorGreen);
+    color: var(--primaryColor);
     font-size: 4rem;
     font-weight: 300;
     align-self: center;
