--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -23,7 +23,7 @@
   overflow: hidden;
   background: linear-gradient(
     301deg,
-    var(--primaryColorGreen) 34.39%,
+    var(--primaryColor) 34.39%,
     var(--primaryColorGreen100) 100%
   );
 }
@@ -69,31 +69,31 @@
   -webkit-transform: translateY(50x);
   -ms-transform: translateY(50x);
   transform: translateY(50x);
-  background: var(--primaryBackgroundColor);
+  background: var(--secondaryColor);
   margin: auto;
   z-index: 0;
 }
 
 .wire-dark{
-  background: var(--primaryColorBlack);
+  background: var(--secondaryColor);
 }
 
 .triangle {
   border-left: 26px solid transparent;
   border-right: 26px solid transparent;
-  border-bottom: 26px solid var(--primaryBackgroundColor);
+  border-bottom: 26px solid var(--secondaryColor);
   -webkit-transform: translateY(-15px);
   -ms-transform: translateY(-15px);
   transform: translateY(-15px);
   
 }
 .triangle-dark{
-  border-bottom: 26px solid var(--primaryColorBlack);
+  border-bottom: 26px solid var(--secondaryColor);
   
 }
 
 .bulb {
-  background: var(--primaryBackgroundColor);
+  background: var(--secondaryColor);
   height: 20px;
   width: 20px;
   position: relative;
@@ -154,7 +154,7 @@
   font-size: 0.7rem;
   text-align: center;
   opacity: 0.8;
-  color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
 }
 
 .footer-content-left .logo-container {
@@ -176,7 +176,7 @@
 }
 
 .logo-contact-details a {
-  color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
   line-height: 170%;
 }
 
@@ -188,7 +188,7 @@
 }
 
 .footer-content-right h2 {
-  color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
   font-size: 1.5rem;
   font-weight: 600;
 }
@@ -196,7 +196,7 @@
 .footer-content-right .ruler {
   width: 10.9375rem;
   height: 0.0625rem;
-  background: var(--primaryBackgroundColor);
+  background: var(--secondaryColor);
   margin: 0.44rem 0 1rem;
 }
 
@@ -207,7 +207,7 @@
 }
 
 .footer-content-right li {
-  color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
   white-space: nowrap;
 }
 
@@ -215,7 +215,7 @@
   background: linear-gradient(
     90deg,
     var(--primaryColorGreen200) 0%,
-    var(--primaryColorGreen) 100%
+    var(--primaryColor) 100%
   );
   display: flex;
   align-items: center;
@@ -224,6 +224,6 @@
 }
 
 .copyright p {
-  color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
   line-height: 1.25rem;
 }
