--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
   z-index: 5;
 }
 
