--- a/src/components/blog/Blog.module.css
+++ b/src/components/blog/Blog.module.css
@@ -21,7 +21,7 @@
   width: 18.125rem;
   height: 30.625rem;
   border-radius: 0.5rem;
-  border-top: 4px solid var(--primaryColorGreen);
+  border-top: 4px solid var(--primaryColor);
   box-shadow: 0px 4px 25px 10px rgba(0, 0, 0, 0.08);
   padding: 0 1.62rem;
 }
