--- a/src/components/customerPlanOptions/CustomerPlanOptions.module.css
+++ b/src/components/customerPlanOptions/CustomerPlanOptions.module.css
@@ -26,30 +26,32 @@
     width: 18.75rem;
     height: 31.25rem;
     padding: 0 2.19rem;
-    overflow: hidden;
     border: 1px solid var(--primaryColorNeutral600);
     background: white; 
     margin-top: 9.62rem;
   }
+
+  .plan-dark{
+background: #0b1814;
+box-shadow: 0 0 25px -5px var(--primaryColor);
+border: 1px solid var(--primary)
+  }
   
   .plan:nth-child(1) {
-    border-radius: 0.5rem 0 0 0.5rem;
   }
   
   .plan:nth-child(2) {
     transform: scale(1.2);
-    border-radius: 0.6rem;
     border: 1.2px solid var(--primaryColorNeutral600);
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
     z-index: 5;
   }
   
   .plan:nth-child(2) .plan-title-container {
-    background:  #A7FFA4;
+    background:  var(--bannerColor);
   }
   
   .plan:nth-child(3) {
-    border-radius: 0 0.5rem 0.5rem 0;
   }
   
   .plan-title-container {
@@ -64,16 +66,20 @@
     border: 1px solid var(--primaryColorNeutral600);
     background: var(--primaryColorNeutral900);
   }
+
+  .plan-title-container-dark{
+    background-color: #000;
+  }
   
   .plan-title-container h2 {
-    color: var(--primaryColorGreen100);
+    color: var(--headerText);
     text-align: center;
     font-size: 0.875rem;
     font-weight: 600;
   }
   
   .plan span {
-    color: var(--primaryColorGreen100);
+    color: var(--headerText);
     text-align: center;
     font-size: 1rem;
     font-weight: 400;
@@ -127,7 +133,7 @@
   }
   
   .perk li {
-    color: var(--primaryColorGreen100);
+    color: var(--headerText);
     font-family: Poppins, sans-serif;
     font-size: 1rem;
     font-weight: 400;
